super ai bot fixes
